tests/ui/parser/typod-const-in-const-param-def.stderr
error: `const` keyword was mistyped as `Const`
  --> $DIR/typod-const-in-const-param-def.rs:1:12
   |
LL | pub fn foo<Const N: u8>() {}
   |            ^^^^^
   |
help: use the `const` keyword (notice the capitalization)
   |
LL - pub fn foo<Const N: u8>() {}
LL + pub fn foo<const N: u8>() {}
   |

error: `const` keyword was mistyped as `Const`
  --> $DIR/typod-const-in-const-param-def.rs:7:12
   |
LL | pub fn baz<Const N: u8, T>() {}
   |            ^^^^^
   |
help: use the `const` keyword (notice the capitalization)
   |
LL - pub fn baz<Const N: u8, T>() {}
LL + pub fn baz<const N: u8, T>() {}
   |

error: `const` keyword was mistyped as `Const`
  --> $DIR/typod-const-in-const-param-def.rs:10:15
   |
LL | pub fn qux<T, Const N: u8>() {}
   |               ^^^^^
   |
help: use the `const` keyword (notice the capitalization)
   |
LL - pub fn qux<T, Const N: u8>() {}
LL + pub fn qux<T, const N: u8>() {}
   |

error: `const` keyword was mistyped as `Const`
  --> $DIR/typod-const-in-const-param-def.rs:13:16
   |
LL | pub fn quux<T, Const N: u8, U>() {}
   |                ^^^^^
   |
help: use the `const` keyword (notice the capitalization)
   |
LL - pub fn quux<T, Const N: u8, U>() {}
LL + pub fn quux<T, const N: u8, U>() {}
   |

error: aborting due to 4 previous errors

